<resources>
    <string name="app_name">Asistente De Compras</string>
    <string name="login">Asistente de Compras</string>
    <string name="txtCat">Categorias de Productos</string>

    <string name="title_activity_usuarios">Usuarios</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="txtResUser">Registro De Usuarios</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="TxtCed">Ingrese su cédula</string>
    <string name="TxtNom">Ingrese su nombre</string>
    <string name="LblNom">Nombre</string>
    <string name="LblCed">Cédula</string>
    <string name="bnRegistrar">Registrar</string>
    <string name="bnCreateUser">Crear Usuario</string>
    <string name="bnNuevaList">Nueva Lista</string>
    <string name="bnLista">Lista</string>
    <string name="bnProductos">Productos</string>
    <string name="tuLista">Tu Lista de Compra</string>
    <string name="bnVerLista">Ver Lista</string>

</resources>